# A-Scripting-Language

./: README.md  ScriptLanguage.cabal  commands.hist
.hg/: dirstate  hgrc  undo.desc
.hg/cache/: branch2-visible  rbc-revs-v1  tags2
.hg/store/: 00changelog.i  00manifest.i  fncache  undo
.hg/store/data/: _expr.hs.i  _main.hs.i  _outcome.hs.i  _parsing.hs.i  _r_e_p_l.hs.i  _script_language.cabal.i  _tree.hs.i  commands.hist.i  history.txt.i
.hg/store/data/app/: _expr.hs.i  _main.hs.i  _outcome.hs.i  _parsing.hs.i  _r_e_p_l.hs.i  _tests.hs.i  _tree.hs.i  history.txt.i  test.txt.i
app/: Expr.hs  Main.hs  Outcome.hs  Parsing.hs  REPL.hs  Tests.hs  Tree.hs
